5th june - 8.52pm

--- a/drinks.html
+++ b/drinks.html
@@ -61,17 +61,22 @@
         <h1 id="page-header">Drinks Menu</h1>
     </div>
     
+                <!--special section tag to go around the height of the navigation bar to achieve desired height-->
+                <seciton id="sparkling-top"></seciton>
+
     <!--in-page-navigation-->
-    <section class="grid-system">
-        <nav id="in-page-nav">
-            <ul>
-                <li><a class="in-page-menu" href="#sparkling">Sparkling</a></li>
-                <li><a class="in-page-menu" href="#white">White</a></li>
-                <li><a class="in-page-menu" href="#cocktails">Cocktails</a></li>
-                <li><a class="in-page-menu" href="#soft">Soft Drinks</a></li>
-        </ul>
-        </nav>
-    </section>
+    <div class="in-page-group">
+        <div class="grid-system in-page-navbar">
+            <nav class="grid-system" id="in-page-nav">
+                <ul>
+                    <li><a class="in-page-menu" href="#sparkling-top">Sparkling</a></li>
+                    <li><a class="in-page-menu" href="#white-top">White</a></li>
+                    <li><a class="in-page-menu" href="#cocktails-top">Cocktails</a></li>
+                    <li><a class="in-page-menu" href="#soft-top">Soft Drinks</a></li>                </ul>
+            </nav>
+        </div>
+        <hr class="in-page-nav-line">
+    </div>
 
 
     <!--Sparking-->
@@ -104,6 +109,8 @@
         <div class="drink-item section-1">
             <dl>
                 <dt>NV Brut, Laurent-Perrier "La Cuvee"</dt>
+                                <!--special section tag to go around the height of the navigation bar to achieve desired height-->
+                                <seciton id="white-top"></seciton>
                     <dd class="location">Champagne, France</dd>
                     <dd>toasted nuts, brioche, green apple, lemon pie, fun and persistent</dd>
             </dl>
@@ -144,6 +151,8 @@
         <div class="drink-item section-1">
             <dl>
                 <dt>20 Matho, Pinot Grigio “Delle Venezie”</dt>
+                                <!--special section tag to go around the height of the navigation bar to achieve desired height-->
+                                <seciton id="cocktails-top"></seciton>
                     <dd class="location">Italy</dd>
                     <dd>clean bright and lovely aromatic, pear and a crisp finish</dd>
                 </dl> 
@@ -233,6 +242,8 @@
         <div class="drink-item section-2">
             <dl>
                 <dt>Ari Maya</dt>
+                                <!--special section tag to go around the height of the navigation bar to achieve desired height-->
+                                <seciton id="soft-top"></seciton>
                     <dd>gin, lemon juice, vanilla infused honey</dd>
                 </dl>
             </div>   
