--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         <div class="content dark-bg grid-system">
             <h2 id="landing-header">Mothers Day Specials</h2>
 
-        <div id="large-item">
-            <img class="specials-header-container specials-header" src="assets/landing/special_01.jpg">
+        <div class="specials-header-container" id="large-item">
+            <img class="specials-header" src="assets/landing/cover.jpg">
         </div>
 
         <!--content-->
@@ -230,13 +230,11 @@
 
 
 <!--Map-->
-<section id="landing-map" class="content grid-system">
+<section id="landing-map" class="grid-system">
 
         <h2 id="landing-header">Locate Us</h2>
 
-        <map>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3312.975123342218!2d151.19913421521014!3d-33.86453198065747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12ae47a039d033%3A0x1aba5f8e46d58096!2sAnason!5e0!3m2!1sen!2sau!4v1685931615221!5m2!1sen!2sau" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </map>
+        <iframe class="map large-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3312.975123342218!2d151.19913421521014!3d-33.86453198065747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12ae47a039d033%3A0x1aba5f8e46d58096!2sAnason!5e0!3m2!1sen!2sau!4v1685931615221!5m2!1sen!2sau" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
    
     </section>
 </body>
