5th june - 9.51pm

--- a/about.html
+++ b/about.html
@@ -60,6 +60,7 @@
         <h1 id="page-header">About Us</h1>
     </div>
 
+    <!-- landing image -->
     <div class="grid-system abouts-intro">
         <div class="whole-width-text">
             <p>All our food menus are designed to share with a strong focus on vegetarian and seafood dishes. Our ever-changing menus are young, fresh and vibrant showcasing the best of contemporary Turkish cuisine.</p>
@@ -68,7 +69,7 @@
         </div>
         
         <div class="grid-system">
-            <img id="large-item" src="assets/other_images/about-01.jpg" alt="a table of food">
+            <img class="about-page-full-image" id="large-item" src="assets/other_images/about-01.jpg" alt="A table of food">
         </div>
     </div>
 
@@ -84,8 +85,8 @@
             <p>Sivrioglu is joined by acclaimed Executive Chef Arman Uz in creating Anason&#8217;s seasonal, modern Turkish menus and providing Sydney with its own waterfront meyhane.</p>
         </div>
     
-            <img class="about-page-square-image" id="two-images-1" src="assets/other_images/about-03.jpg" alt="chef anason">
-            <img class="about-page-square-image" id="two-images-2" src="assets/other_images/about-02.jpg" alt="team">
+            <img class="about-page-square-image" id="two-images-1" src="assets/other_images/about-03.jpg" alt="Head Chef - Anason">
+            <img class="about-page-square-image" id="two-images-2" src="assets/other_images/about-02.jpg" alt="Anason chef team">
     </section>
 
     <!--Our Food-->
