--- a/food.html
+++ b/food.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="css/search-page.css">
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
     <script src="js/reserve.js"></script>
+    <script src="js/testing.js"></script>
 </head>
 
 
