--- a/product.html
+++ b/product.html
@@ -63,7 +63,7 @@
     <!--return icon-->
     <div class="grid-system">
         <p id="return-icon">
-            <a href="Food page.html"><img src="assets/icons/back_black.png" alt="Back button"></a>
+            <a href="Food page.html"><img class="return" src="assets/icons/back_black.png" alt="Back button"></a>
         </p>
         <!--go back to the previous page using js function-->
     </div>
