5th june - 10.16pm

--- a/food.html
+++ b/food.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" type="text/css" href="css/search-page.css">
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
     <script src="js/reserve.js"></script>
-    <script src="js/testing.js"></script>
 </head>
 
 
@@ -311,11 +310,12 @@
             </figure>
 
         <figure id="item-grid-2">
-            <img class="food-image" data-category="vegetarian" src="assets/food/menu_dessert_02.jpg" alt="cheesecake">
-                <figcaption>
-                    <p class="food-name">Tilba Haloumi ( 8 )</p>
-                    <p class="food-description">Local honey and Lavender oil</p>
-                </figcaption>
+            <a href="product.html" class="figure-link">
+                <img class="food-image" data-category="vegetarian" src="assets/food/menu_dessert_02.jpg" alt="cheesecake">
+                    <figcaption>
+                        <p class="food-name">Tilba Haloumi ( 8 )</p>
+                        <p class="food-description">Local honey and Lavender oil</p>
+                    </figcaption>
             </a>
         </figure>
     </section>
