--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anason - Food Menu</title>
+    <title>Anason - Rock Oysters</title>
     <link rel="stylesheet" type="text/css" href="css/about.css">
     <link rel="stylesheet" type="text/css" href="css/button.css">
     <link rel="stylesheet" type="text/css" href="css/confirmation.css">
@@ -62,10 +62,7 @@
 
     <!--return icon-->
     <div class="grid-system">
-        <p id="return-icon">
-            <a href="Food page.html"><img class="return" src="assets/icons/back_black.png" alt="Back button"></a>
-        </p>
-        <!--go back to the previous page using js function-->
+        <a href="javascript:void(0)" id="return-icon"><img class="return" src="assets/icons/back_black.png" alt="Back button"></a>
     </div>
 
 
