--- a/reserve.detail.html
+++ b/reserve.detail.html
@@ -57,6 +57,16 @@
         <h1 id="page-header">Reservation</h1>
     </div>
     <div class="grid-system" id="changedgrid">
+        <div id="wholecontainer">
+            <div class="selectoroption">
+                <p>No.of Guest /p>
+                    <div id="plusandminus">
+                        <span id="minus">-</span>
+                        <span id="number">01</span>
+                        <span id="plus">+</span>
+                    </div>
+            </div>
+        </div>
         <form action="reserve.payment.html" method="get">
             <div class="typingbar-container">
                 <label>First Name:</label>
@@ -82,12 +92,6 @@
             <button type="submit" id="continuebutton">Continue</button>
         </form>
     </div>
-    <div class="grid-system">
-        
-    </div>
-   
-
-    
 </body>
 
 
