5th june - 11.47pm

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <link rel="stylesheet" type="text/css" href="css/search-page.css">
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
     <script src="js/reserve.js"></script>
+
+    <!--responsive css-->
+    <link rel="stylesheet" type="text/css" href="css/max-width-1221.css">
+    <link rel="stylesheet" type="text/css" href="css/mhamburger-menu.css">
 </head>
 
 
