--- a/product.html
+++ b/product.html
@@ -62,7 +62,7 @@
 
     <!--return icon-->
     <div class="grid-system">
-        <a href="javascript:void(0)" id="return-icon"><img class="return" src="assets/icons/back_black.png" alt="Back button"></a>
+        <a href="#" id="return-icon"><img class="return" src="assets/icons/back_black.png" alt="Back button"></a>
     </div>
 
 
@@ -70,9 +70,7 @@
 <section class="grid-system product-content">
 
         <!-- h1 header -->
-        <div class="grid-system">
-            <h1 id="page-header">Rock Oysters</h1>
-        </div>
+        <h1 id="page-header">Rock Oysters</h1>
 
         <!-- images -->
         <img class="about-page-square-image" id="two-images-1" src="assets/product_image/rock_oysters_01.jpg" alt="Rock Oysters">
