--- a/reserve.detail.html
+++ b/reserve.detail.html
@@ -59,11 +59,11 @@
     <div class="grid-system" id="changedgrid">
         <div id="wholecontainer">
             <div class="selectoroption">
-                <p>No.of Guest /p>
+                <p>No.of Guest </p>
                     <div id="plusandminus">
-                        <span id="minus">-</span>
-                        <span id="number">01</span>
-                        <span id="plus">+</span>
+                        <span class="minus">-</span>
+                        <span class="number">0</span>
+                        <span class="plus">+</span>
                     </div>
             </div>
         </div>
