--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <!--Social Media Icons-->
         <h3 id="footer-1" class="footer-header">Social Media</h3>
 
-        <h3 id="footer-2" class="footer-header">Get To Us</h3>
+        <h3 id="footer-2-1" class="footer-header">Get To Us</h3>
 
         <section id="footer-1" class="footer-socials">
 
@@ -287,12 +287,12 @@
         </div>
 
         <div id="footer-5">
-            <p class="footer-gtu-description">Till 12pm Everyday</p>
+            <p class="footer-gtu-description opening-hours">Till 12pm Everyday</p>
             <a id="footer-column-5" class="footer-gtu-description" href=”mailto:abc@unimelb.edu.au”>bookings@anason.com.au</a>
         </div>
     
         <!--copywrite-->
-        <div id="footer-1"> 
+        <div id="footer-copyright-grid"> 
             <p class="footer-copyright">&copy; 2023 Anason. All rights reserved.</p>
         </div>
     </div>
