--- a/reserve.detail.html
+++ b/reserve.detail.html
@@ -56,15 +56,17 @@
      <div class="grid-system">
         <h1 id="page-header">Reservation</h1>
     </div>
+    <br>
     <div class="grid-system" id="changedgrid">
         <div id="wholecontainer">
             <div class="selectoroption">
                 <p>No.of Guest </p>
-                    <div id="plusandminus">
-                        <span class="minus">-</span>
-                        <span class="number">0</span>
-                        <span class="plus">+</span>
-                    </div>
+                <span><input class="numberOfGuest" type="number"></span>
+            </div>
+            <br>
+            <div class="selectoroption">
+                <p>Reservation date </p>
+                <span><input class="redate" type="date"></span>
             </div>
         </div>
         <form action="reserve.payment.html" method="get">
