6th june - 2.38am

--- a/search.html
+++ b/search.html
@@ -126,15 +126,16 @@
     </section>
 </body>
     
+
 <!--Footer-->
-<footer id="footer" class="search-footer">
+<footer id="footer">
 
     <div class="grid-system">
 
         <!--Social Media Icons-->
         <h3 id="footer-1" class="footer-header">Social Media</h3>
 
-        <h3 id="footer-2" class="footer-header">Get To Us</h3>
+        <h3 id="footer-2-1" class="footer-header">Get To Us</h3>
 
         <section id="footer-1" class="footer-socials">
 
@@ -169,12 +170,13 @@
         </div>
 
         <div id="footer-5">
-            <p class="footer-gtu-description">Till 12pm Everyday</p>
+            <p class="footer-gtu-description opening-hours">Till 12pm Everyday</p>
+            <br>
             <a id="footer-column-5" class="footer-gtu-description" href=”mailto:abc@unimelb.edu.au”>bookings@anason.com.au</a>
         </div>
     
         <!--copywrite-->
-        <div id="footer-1"> 
+        <div id="footer-copyright-grid"> 
             <p class="footer-copyright">&copy; 2023 Anason. All rights reserved.</p>
         </div>
     </div>
