6th june - 3.17am

--- a/reserve.detail.html
+++ b/reserve.detail.html
@@ -58,8 +58,17 @@
         </div>
     </nav>
 </header>
-<br>
+
+
 <body class="grid">
+
+    <!--under-nav-space-->
+    <div>
+        <br>
+        <br>
+        <br>
+    </div>
+
     <div class="grid-system">
         <p class="subhead">DETAILS</p>
     </div>
@@ -153,7 +162,6 @@
 
         <div id="footer-5">
             <p class="footer-gtu-description opening-hours">Till 12pm Everyday</p>
-            <br>
             <a id="footer-column-5" class="footer-gtu-description" href=”mailto:abc@unimelb.edu.au”>bookings@anason.com.au</a>
         </div>
     
