--- a/reserve.html
+++ b/reserve.html
@@ -63,6 +63,15 @@
 
 <body>
 
+    <!--under-nav-space-->
+    <div>
+        <br>
+        <br>
+        <br>
+    </div>
+
+
+    
 </body>
 
 
@@ -110,7 +119,6 @@
 
         <div id="footer-5">
             <p class="footer-gtu-description opening-hours">Till 12pm Everyday</p>
-            <br>
             <a id="footer-column-5" class="footer-gtu-description" href=”mailto:abc@unimelb.edu.au”>bookings@anason.com.au</a>
         </div>
     
