--- a/reserve.payment.html
+++ b/reserve.payment.html
@@ -58,7 +58,18 @@
         </div>
     </nav>
 </header>
+
+
 <body class="grid">
+
+
+    <!--under-nav-space-->
+    <div>
+        <br>
+        <br>
+        <br>
+    </div>
+    
     <div class="dropdown">
         <button class="dropdown-toggle">Dropdown</button>
         <ul class="dropdown-menu">
@@ -170,7 +181,6 @@
 
         <div id="footer-5">
             <p class="footer-gtu-description opening-hours">Till 12pm Everyday</p>
-            <br>
             <a id="footer-column-5" class="footer-gtu-description" href=”mailto:abc@unimelb.edu.au”>bookings@anason.com.au</a>
         </div>
     
