--- a/about.html
+++ b/about.html
@@ -61,6 +61,14 @@
 
 
 <body>
+
+    <!--under-nav-space-->
+    <div>
+        <br>
+        <br>
+        <br>
+    </div>
+    
     <!-- subheader -->
     <div class="grid-system" id="subhead-container">
         <ul class="subhead">
@@ -163,7 +171,6 @@
 
         <div id="footer-5">
             <p class="footer-gtu-description opening-hours">Till 12pm Everyday</p>
-            <br>
             <a id="footer-column-5" class="footer-gtu-description" href=”mailto:abc@unimelb.edu.au”>bookings@anason.com.au</a>
         </div>
     
