--- a/drinks.html
+++ b/drinks.html
@@ -62,6 +62,13 @@
 
 <body class="grid">
 
+    <!--under-nav-space-->
+    <div>
+        <br>
+        <br>
+        <br>
+    </div>
+
     <!-- subheader -->
     <div class="grid-system" id="subhead-container">
         <ul class="subhead">
@@ -364,7 +371,6 @@
 
         <div id="footer-5">
             <p class="footer-gtu-description opening-hours">Till 12pm Everyday</p>
-            <br>
             <a id="footer-column-5" class="footer-gtu-description" href=”mailto:abc@unimelb.edu.au”>bookings@anason.com.au</a>
         </div>
     
