--- a/food.html
+++ b/food.html
@@ -66,7 +66,7 @@
     <!--header image-->
     <section class="food-top">
         
-        <img id="food-header" class="food-head-image" src="assets/food/menu_header.jpg">
+        <img id="food-header-image" class="food-head-image" src="assets/food/menu_header.jpg">
 
     </section>
 
@@ -379,7 +379,6 @@
 
         <div id="footer-5">
             <p class="footer-gtu-description opening-hours">Till 12pm Everyday</p>
-            <br>
             <a id="footer-column-5" class="footer-gtu-description" href=”mailto:abc@unimelb.edu.au”>bookings@anason.com.au</a>
         </div>
     
