6th june - 4.04am

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <img class="landing-head-image" src="assets/landing/cover_02.1.jpg">
         
         <!--head text-->
-        <h1 class="landing-text">Elevate Your Palate With <br> Authentic Turkish Flavours</h1>
+        <h1 class="landing-text">Elevate Your Palate With Authentic Turkish Flavours</h1>
         
         <a href="reserve.html">
             <img class="reserve-button landing-reserve" src="assets/buttons/reserve_now_blue.png">
