--- a/search.html
+++ b/search.html
@@ -61,7 +61,7 @@
 
 
 <body>
-
+    <div id="page-container">
 
     <!--under-nav-space-->
     <div>
@@ -132,11 +132,10 @@
         </a>
         </figure>
     </section>
-</body>
-    
+
 
 <!--Footer-->
-<footer id="footer">
+<footer id="footer" class="search-footer">
 
     <div class="grid-system">
 
@@ -188,4 +187,6 @@
         </div>
     </div>
 </footer>
+</div>
+</body>
 </html>
