--- a/reserve.detail.html
+++ b/reserve.detail.html
@@ -92,19 +92,33 @@
             <br>
             <div id="longSelector" class="grid-system">
                 <p id="reserveTime">Prefered Time</p>
-                <div>
-                    <span><input class="preferTime" type="checkbox" >12:00</span>
-                    <span><input class="preferTime" type="checkbox" >12:00</span>
-                    <span><input class="preferTime" type="checkbox" >12:00</span>
-                    <span><input class="preferTime" type="checkbox" >12:00</span>
-                    <span><input class="preferTime" type="checkbox" >12:00</span>
-                    <span><input class="preferTime" type="checkbox" >12:00</span>
-                    <span><input class="preferTime" type="checkbox" >12:00</span>
-                    <span><input class="preferTime" type="checkbox" >12:00</span>
+                <div id="time-grid-1">
+                    <div class="check"><input class="preferTime" type="checkbox" >12:00</div>
+                    <div><input class="preferTime" type="checkbox" >12:00</div>
+                </div>
+                <div id="time-grid-2">
+                    <div class="check"><input class="preferTime" type="checkbox" >12:00</div>
+                    <div><input class="preferTime" type="checkbox" >12:00</div>
+                </div>
+                <div id="time-grid-3">
+                    <div class="check"><input class="preferTime" type="checkbox" >12:00</div>
+                    <div><input class="preferTime" type="checkbox" >12:00</div>
+                </div>
+                <div id="time-grid-4">
+                    <div class="check"><input class="preferTime" type="checkbox" >12:00</div>
+                    <div><input class="preferTime" type="checkbox" >12:00</div>
                 </div>
             </div>
-        </div>
-
+            <br>
+            <div id="longSelector" class="grid-system">
+                <p id="reserveTime">Prefered seating</p>
+                <div id="time-grid-1">
+                    <div class="check"><input class="preferTime" type="checkbox" >12:00</div>
+                </div>
+                <div id="time-grid-3">
+                    <div class="check"><input class="preferTime" type="checkbox" >12:00</div>
+                </div>
+            </div>
         </div>
         <form action="reserve.payment.html" method="get" onsubmit="return validDate()">
             <div class="typingbar-container">
