6th june - 5.08pm

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <nav class="navbar">
 
         <!--hamburger menu for small screen-->
-        <div class="hamburger-menu">
+        <div class="hamburger-icon">
             <a href="hamburger.html"><img class="white-hamburgericon" src="assets/icons/hamburger.png" alt="Hamburger Menu"></a>
         </div>
 
