--- a/product.html
+++ b/product.html
@@ -63,10 +63,17 @@
 
 <body>
 
+    <!--under-nav-space-->
+    <div>
+        <br>
+        <br>
+        <br>
+    </div>
+
     <!-- subheader -->
     <div class="grid-system" id="subhead-container">
         <ul class="subhead">
-            <li>SEARCH</li>
+            <li>MENU</li>
             <li><img class="subhead-arrow" src="assets/icons/navigation arrow.png"></li>
             <li>PRODUCT</li>
         </ul>
@@ -75,7 +82,7 @@
 
     <!--return icon-->
     <div class="grid-system">
-        <a href="#" id="return-icon"><img class="return" src="assets/icons/back_black.png" alt="Back button"></a>
+        <a href="food.html" id="return-icon"><img class="return" src="assets/icons/back_black.png" alt="Back button"></a>
     </div>
 
 
