--- a/reserve.payment.html
+++ b/reserve.payment.html
@@ -91,34 +91,48 @@
                 </div>
                 <div class="left-container">
                     <label class="show">First Name: </label>
-                    <span id="firstName"></span>
+                    <div class="resultContainer">
+                        <span id="firstName" readonly></span>
+                    </div>
                 </div>
                 <div class="left-container">
                     <label class="show">Last Name: </label>
-                    <span id="lastName"></span>
+                    <div class="resultContainer">
+                        <span id="lastName"></span>
+                    </div>
                 </div>
                 <div class="left-container">
                     <label class="show">Mobile: </label>
-                    <span id="mobile"></span>
+                    <div class="resultContainer">
+                        <span id="mobile"></span>
+                    </div>
                 </div>
                 <div class="left-container">
                     <label class="show">Email: </label>
-                    <span id="email"></span>
+                    <div class="resultContainer" id="emailspecial">
+                        <span id="email"></span>
+                    </div>
                 </div>
                 <div class="left-container">
                     <label class="show">Date: </label>
-                    <span id="date"></span>
+                    <div class="resultContainer">
+                        <span id="date"></span>
+                    </div>
                 </div>
                 <div class="left-container">
                     <label class="show">Time: </label>
-                    <span id="time"></span>
+                    <div class="resultContainer">
+                        <span id="time"></span>
+                    </div>
                 </div>
                 <div class="left-container">
                     <label class="show">Seats: </label>
-                    <span id="seats"></span>
+                    <div class="resultContainer">
+                        <span id="seats"></span>
+                    </div>
                 </div>
                 <div class="left-container" id="specialcon">
-                    <div>
+                    <div class="resultContainer">
                         <label >Special Requirement: </label>
                     </div>
                 </div>
