--- a/search.html
+++ b/search.html
@@ -39,25 +39,31 @@
     <!--navigation bar-->
     <nav class="navbar">
 
+        <!--hamburger menu for small screen-->
+        <div class="hamburger-icon">
+            <a href="hamburger.html"><img class="white-hamburgericon" src="assets/icons/hamburger.png" alt="Hamburger Menu"></a>
+        </div>
+
         <!--pages-->
         <ul class="navlist">
             <li><a class="nav-pages" href="food.html">Food</a></li>
             <li><a class="nav-pages" href="drinks.html">Drinks</a></li>
-            <li><a class="nav-pages" href="reserve.detail.html">Reserve</a></li>
+            <li><a class="nav-pages" href="reserve.html">Reserve</a></li>
             <li><a class="nav-pages" href="about.html">About</a></li>
         </ul>
 
         <!--brand logo-->
         <div class="nav-logo">
-            <a href="index.html"><img class="white-brandlogo" src="assets/icons/anason_white.png" alt="brand logo"></a>
+            <a href="index.html"><img class="white-brandlogo" src="assets/icons/anason_white.png" alt="ANASON"></a>
         </div>
 
         <!--search icon-->
         <div class="nav-search">
-            <a href="search.html"><img class="white-searchicon" src="assets/icons/search_icon_white.png" alt="search icon"></a>
+            <a href="search.html"><img class="white-searchicon" src="assets/icons/search_icon_white.png" alt="Search"></a>
         </div>
     </nav>
 </header>
+
 
 
 <body>
