--- a/confirmation.html
+++ b/confirmation.html
@@ -41,13 +41,13 @@
 
     <div class="confirmation-details">
     <!--function-->
-    <p>Your booking for <span id="reservation-name"></span><!--function insided--></p>
+    <p>Your booking for <span id="reservation-name">Michael Hu</span><!--function insided--></p>
     
-    <p id="reservation-time">at Time (am/pm)<!--function insided--></p>
+    <p id="reservation-time">at 12:00pm<!--function insided--></p>
 
-    <p id="reservation-date">on Day, Day Month Year<!--function insided--></p>
+    <p id="reservation-date">on 06/06/2023<!--function insided--></p>
 
-    <p class="confirmation-text">A confirmation email has been sent to you on</p>
+    <p class="confirmation-text">A confirmation email has been sent to you on your email</p>
 
     <p><span id="reservation-email"></span><!--function insided--></p>
     </div>  
