--- a/food.html
+++ b/food.html
@@ -31,6 +31,7 @@
     <!--javascript/s-->
     <script src="js/reserve.js"></script>
     <script src="js/payment.js"></script>
+    <script src="js/food.js"></script>
 </head>
 
 
@@ -92,17 +93,13 @@
 
     <!--Drop down filter icon-->
     <div class="grid-system filter-container">
-        <button class="filter-button" onclick="toggleDropdown()">
-            <img src="assets/icons/filter.png" alt="Filter">
-        </button>
+        <button class="filter-button" onclick="toggleDropdown()">Filter</button>
         <div class="filter-menu" id="filterMenu">
-            <ul>
-                <li><a href="#vegetarian">Vegetarian</a></li>
-                <li><a href="#seafood">Seafood</a></li>
-                <li><a href="#beef">Beef</a></li>
-          </ul>
+          <a href="result.html">Vegetarian</a>
+          <a href="result.html">Seafood</a>
+          <a href="result.html">Beef</a>
         </div>
-    </div>
+      </div>
 
             <!--for in-page-navbar-->
             <!--used this as a way to go around the navbar-->
