--- a/product.html
+++ b/product.html
@@ -87,7 +87,7 @@
 
     <!--return icon-->
     <div class="grid-system">
-        <a href="food.html" id="return-icon"><img class="return" src="assets/icons/back_black.png" alt="Back button"></a>
+        <a href="javascript:history.go(-1)" id="return-icon"><img class="return" src="assets/icons/back_black.png" alt="Back button"></a>
     </div>
 
 
