--- a/food.html
+++ b/food.html
@@ -101,9 +101,9 @@
     <div class="grid-system filter-container">
         <button class="filter-button" onclick="toggleDropdown()">Filter</button>
         <div class="filter-menu" id="filterMenu">
-          <a href="result.html">Vegetarian</a>
-          <a href="result.html">Seafood</a>
-          <a href="result.html">Beef</a>
+          <a href="filtered.html">Vegetarian</a>
+          <a href="filtered.html">Seafood</a>
+          <a href="filtered.html">Beef</a>
         </div>
       </div>
 
