--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <!--head text-->
         <h1 class="landing-text">Elevate Your Palate With Authentic Turkish Flavours</h1>
         
-        <a href="reserve.html">
+        <a href="reserve.detail.html">
             <img class="reserve-button landing-reserve" src="assets/buttons/reserve_now_blue.png">
         </a>
     </div> 
