--- a/product.html
+++ b/product.html
@@ -170,7 +170,7 @@
                     <p class="drink-price price-2">( 21 )</p>
                 </div>
             
-            <a class="blue-button buttons-layout" href="food.html">Reserve Now</a>
+            <a class="blue-button buttons-layout" href="reserve.detail.html">Reserve Now</a>
         </section>
 </body>
 
