--- a/result.html
+++ b/result.html
@@ -75,17 +75,28 @@
         <br>
     </div>
 
-    <p class="subhead">SEARCH &nbsp; <img class="subhead-arrow" src="assets/icons/navigation arrow.png"> &nbsp; "OYSTERS"</p>
+     <!-- subheader -->
+     <div class="grid-system" id="subhead-container">
+        <ul class="subhead">
+            <li>SEARCH</li>
+            <li><img class="subhead-arrow" src="assets/icons/navigation arrow.png"></li>
+            <li> "OYSTERS"</li>
+        </ul>
+    </div>
 
-    <p id="return">
-        <a href="search.html"><img src="assets/icons/back_black.png"></a>
-    </p>
+
+     <!--return icon-->
+     <div class="grid-system">
+        <a href="javascript:history.go(-1)" id="return-icon"><img class="return" src="assets/icons/back_black.png" alt="Back button"></a>
+    </div>
+
 
     <!--this should be a function-->
+    <div class="grid-system">
+        <h2>"Oysters"</h2>
+    </div>
 
-<h2>"Oysters"</h2>
-
-<section class="results">
+<section class="grid-system product-content">
     <a href="product.html" class="figure-link">
         <figure class="go-to-product">
             <img class="food-image" data-category="seafood" src="assets/product_image/rock_oysters_01.jpg" alt="rock oysters">
